<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/authorization_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">
    <TextView
        android:id="@+id/intro_text_1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/sansation_regular"
        android:text="@string/permission_text_1"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:lineSpacingExtra="-10sp"/>
    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/intro_text_1"
        android:fontFamily="@font/sansation_regular"
        android:text="@string/permission_text_2"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:lineSpacingExtra="-5sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/intro_text_1"
        android:adjustViewBounds="true"
        android:maxWidth="160dp"
        android:maxHeight="160dp"
        android:scaleType="fitCenter"
        android:layout_marginStart="3dp"
        android:src="@drawable/echoostation_icone_foreground_3x"
        android:contentDescription="@string/app_logo_description"/>

    <RelativeLayout
        android:id="@+id/button_container"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/sansation_bold"
            android:text="@string/authorize"
            android:backgroundTint="@color/accentColor"/>
        <Button
            android:id="@+id/quit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_button"
            android:fontFamily="@font/sansation_bold"
            android:text="@string/quit"
            android:textColor="@color/accentColor"
            android:backgroundTint="@color/transparenceColor"/>
    </RelativeLayout>
</RelativeLayout>